--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-hook-form": "^7.53.0",
     "react-native": "0.75.4",
     "react-native-config": "^1.5.3",
+    "react-native-document-picker": "^9.3.1",
     "react-native-mapbox-places-autocomplete": "^0.0.3",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
